tips-and-tricks/rancher-additional-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher.g2.zypp.lo
  namespace: cattle-system
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  tls:
  - hosts:
      - rancher.g2.zypp.lo
    secretName: testsecret-tls
  rules:
  - host: rancher.g2.zypp.lo
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: rancher
            port:
              number: 80
